# i3cruntime

./: README.md
Documentation/: device_descriptor.txt  protocol.txt
avr/: Makefile  i3c_runtime.c  i3c_runtime.h
crc/: CMakeLists.txt  crc.c
doc/: protocol.txt
i3cmaster/: CMakeLists.txt  Doxyfile  debug.cpp  debug.h  example.cfg  example1.cpp  i2cendpoint.cpp  i2cendpoint.h  i2cendpoint_dummy.cpp  i2cendpoint_wiringpi.cpp  i3c.h  i3c_commhandler.cpp  i3c_commhandler.h  i3c_master.h  i3cendpoint.cpp  i3cendpoint.h  i3cendpoint_dummy.cpp  master.c  master.cpp  packet.h  slave.cpp  slave.h  slavelist.cpp  slavelist.h  states.dot
i3cmaster/api/: i3c.h
i3cmaster/master/: i2cmaster.cpp  i3c_commhandler.cpp  i3c_commhandler.h  i3c_master.h  i3cendpoint.cpp  i3cendpoint.h  i3cendpoint_dummy.cpp  i3cendpointbroker.cpp  i3cendpointbroker.h  i3cmaster.cpp  i3cpacket.cpp  i3cpacket.h  master.cpp  operation.cpp  operation.h  packet.cpp  packet.h
i3cmaster/platform/dummy/: i2cendpoint_dummy.cpp  i2cendpoint_dummy.h  i3cendpoint_dummy.cpp
i3cmaster/platform/rpi/: i2cendpoint_wiringpi.cpp  wiringpii2cendpoint.cpp  wiringpii2cendpoint.h  wiringpii2cendpointbroker.cpp  wiringpii2cendpointbroker.h
i3cmaster/sys/i2c/: i2caddress.cpp  i2caddress.h  i2cdispatcher.cpp  i2cdispatcher.h  i2cendpoint.cpp  i2cendpoint.h  i2cendpointbroker.cpp  i2cendpointbroker.h  i2cendpointexception.cpp  i2cendpointexception.h  i2cpacket.cpp  i2cpacket.h
